--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,21 @@ h1 {
 }
 
 ul {
-  text-align: center;
-  display: block;
   list-style-type: none;
+  margin: 0;
+  text-align: center;
+  padding: 0;
+}
+
+ul li {
+  display: inline-block;
+  color: #640009;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+li a {
+  color: #83484d;
 }
