--- a/src/styles.css
+++ b/src/styles.css
@@ -25,8 +25,14 @@ ul li {
   cursor: pointer;
 }
 
-li a {
-  color: #83484d;
+a {
+  color: #640009;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+a:hover {
+  text-decoration: underline;
 }
 
 .row {
@@ -36,4 +42,8 @@ li a {
 .column {
   width: 50%;
   padding: 10px;
+}
+
+.contact {
+  text-align: center;
 }
